[gd_scene load_steps=3 format=3 uid="uid://bg3h7rvni1sl6"]

[ext_resource type="PackedScene" uid="uid://n5krmpd5ib3i" path="res://Scenes/Basic/Display.tscn" id="1_oxmh3"]
[ext_resource type="Script" uid="uid://csml3bxetcyqs" path="res://Scripts/Basic/Resolution.gd" id="2_7xhjn"]

[node name="Resolution" instance=ExtResource("1_oxmh3")]
script = ExtResource("2_7xhjn")

[node name="Label" parent="HBoxContainer" index="0"]
text = "Resolution"

[node name="OptionButton" parent="HBoxContainer" index="1"]
custom_minimum_size = Vector2(200, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 35

[connection signal="item_selected" from="HBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
